2009-03-27  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (encode-message): Handle errors during write, e.g.
	closed sockets.

2009-03-27  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-setup-contribs): Moved over from
	slime-autoloads.el

2009-03-27  Helmut Eller  <heller@common-lisp.net>
	* swank-openmcl.lisp (toggle-trace): Replace ccl::%trace with
	ccl:trace-function.
	(kill-thread): Use an implementation that doesn't raise a
	serious-conditions.

2009-03-27  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([test] macroexpand): Fix more case issues.

2009-03-25  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([test] macroexpand): Ignore case.

2009-03-09  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-define-channel-type): Indulge in pretty colors.
	(slime-define-channel-method): You, too!

	(slime-handle-indentation-update): Always put an indentation
	update on 'slime-indent; for slime-indentation-fu.

2009-03-09  Anton Vodonosov <avodonosov@yandex.ru>

	Use correct encoding and eol conventions for socket streams.

	* swank-abcl.lisp (accept-connection): Honor external-format
	argument.
	(*external-format-to-coding-system*, find-external-format): New.

2009-03-09  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-with-xref-buffer): Use buffer-names like
	"*slime xref...*" so that slime-kill-all-buffers can pick
	it up easily.

2009-03-09  Helmut Eller  <heller@common-lisp.net>

	* hyperspec.el (common-lisp-hyperspec-lookup-reader-macro): Use
	case-insensitive completion.
	(hyperspec-lookup-reader-macro): New alias.
	Suggested by Stas Boukarev.

2009-03-09  Helmut Eller  <heller@common-lisp.net>

	Make fasl-pathname fully customizable not only the direcrory part.

	* swank.lisp (*fasl-pathname-function*): New variable.
	(*fasl-directory*): Deleted.

2009-03-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-choose-overlay-for-read-error): Extracted and